--- a/style.css
+++ b/style.css
@@ -7,3 +7,13 @@ Author URI: http://vandelena.xom/
 Template: astra
 Version: 1.0
 */
+
+
+
+
+/* some note here
+
+// && $settings['style'] == 'style1'
+// && $settings['style'] == 'style2'
+
+*/
